--- a/gig_reviews/templates/gig_reviews/search_results.html
+++ b/gig_reviews/templates/gig_reviews/search_results.html
@@ -3,7 +3,7 @@
 
 
 {% block content %}
-<div class="container search-item">
+<div class="container search-item profile-page">
   <div class=" row mx-auto justify-content-center">
     <div class="col-12 text-center">
       <h1>Search Results</h1>
@@ -13,10 +13,10 @@
           {% if results %}
           <ul >
             {% for item in results %}
-              <div class="result-card">
+              <div class="result-card chaos-card mt-5">
                 <li>
                   {% if item.logo %}
-                    <img src="{{ item.logo.url }}" class="img-fluid result-card-logo" alt="{{ item.name }} logo">
+                    <img src="{{ item.logo.url }}" class="img-fluid result-card img result-card-logo" alt="{{ item.name }} logo">
                   {% else %}
                     <h3>{{ item.name }}</h3>
                   {% endif %}
@@ -34,18 +34,30 @@
                   {% if item.town %}
                     <p>{{ item.town }}, {{ item.post_code }}</p>
                   {% endif %}
-                  <hr>
+                </div>
                   {% if item.reviews %}
                     <h4>Reviews</h4>
                     <ul>
                       {% for review in item.reviews %}
-                        <li>
-                          {% if review.image %}
-                            <img src="{{ review.image.url }}" class="img-fluid result-card-gig-image" alt="Gig image">
+                        <li class="result-card tilt mt-5">
+                          {% if review.image and review.image.url %}
+                            <img src="{{ review.image.url }}" class="img-fluid" alt="Gig image">
+                          {% else %}
+                            <img src="https://res.cloudinary.com/dqde3a83z/image/upload/v1748106876/red-horns_meorvq.png" class="card-img-top horns" alt="Default horns image">
+                          {% endif %}
+                            <br>
+                            {% if review.artist %}
+                              <strong>Artist:</strong>
+                              <a href="{% url 'artist' review.artist.pk %}" style="color:#F50000">{{ review.artist.name }}</a><br>
+                            {% else %}
+                              <strong>Venue:</strong>
+                              <a href="{% url 'venue' review.venue.pk %}" style="color:#F50000">{{ review.venue.name }}</a><br>
                             {% endif %}
+                            <strong>Fan:</strong>
+                            <a href="{% url 'author_profile' review.author.pk %}" style="color:#F50000">{{ review.author.username }}</a><br>
                           <h5>{{ review.title }}</h5>
                           <p>{{ review.gig_date|date:"d-m-Y" }}</p>
-                          <p>{{ review.review|truncatechars:500 }}</p>
+                          <p>{{ review.review }}</p>
                         </li>
                       {% endfor %}
                     </ul>
@@ -53,7 +65,6 @@
                     <p><em>No reviews yet.</em></p>
                   {% endif %}
                 </li>
-              </div>
             {% endfor %}
           </ul>
       {% endif %}
