--- a/gig_reviews/templates/gig_reviews/search_results.html
+++ b/gig_reviews/templates/gig_reviews/search_results.html
@@ -43,7 +43,7 @@
                           {% if review.image and review.image.url %}
                             <img src="{{ review.image.url }}" class="img-fluid" alt="Gig image">
                           {% else %}
-                            <img src="https://res.cloudinary.com/dqde3a83z/image/upload/v1748106876/red-horns_meorvq.png" class="card-img-top horns" alt="Default horns image">
+                          <img src="{{ review.image.url|default:'https://res.cloudinary.com/dqde3a83z/image/upload/v1748106876/red-horns_meorvq.png' }}" class="card-img-top horns" alt="Gig image">
                           {% endif %}
                             <br>
                             {% if review.artist %}
