--- a/gig_reviews/templates/gig_reviews/search_results.html
+++ b/gig_reviews/templates/gig_reviews/search_results.html
@@ -40,10 +40,10 @@
                     <ul>
                       {% for review in item.reviews %}
                         <li class="result-card tilt mt-5">
-                          {% if review.image and review.image.url %}
+                          {% if review.image and review.image.url and "placeholder" not in review.image.url %}
                             <img src="{{ review.image.url }}" class="img-fluid" alt="Gig image">
                           {% else %}
-                          <img src="{{ review.image.url|default:'https://res.cloudinary.com/dqde3a83z/image/upload/v1748106876/red-horns_meorvq.png' }}" class="card-img-top horns" alt="Gig image">
+                          <img src="https://res.cloudinary.com/dqde3a83z/image/upload/v1748106876/red-horns_meorvq.png">
                           {% endif %}
                             <br>
                             {% if review.artist %}
