--- a/gig_reviews/templates/gig_reviews/new_review.html
+++ b/gig_reviews/templates/gig_reviews/new_review.html
@@ -1,10 +1,16 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Submit a Gig Review</h1>
-  <form method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Submit</button>
-  </form>
+<div class="container-fluid page-item">
+  <div class=" row mx-auto justify-content-center align-items-start">
+    <div class="col-12 text-center">
+      <h1>Submit a Gig Review</h1>
+        <form method="post" class="d-flex flex-column align-items-stretch mt-5" enctype="multipart/form-data">
+          {% csrf_token %}
+          {{ form.as_p }}
+          <button type="submit" class="page-btn">Submit</button>
+        </form>
+    </div>
+  </div>
+</div>
 {% endblock %}
