--- a/gig_reviews/templates/gig_reviews/search_results.html
+++ b/gig_reviews/templates/gig_reviews/search_results.html
@@ -36,7 +36,7 @@
 
               {% if item.reviews %}
                 <div class="mt-4">
-                  <h4 class="text-center mb-5">Fan Reviews</h4>
+                  <h4 class="text-center mb-5">Fan Reviews:</h4>
                   <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 justify-content-center">
                     {% for review in item.reviews %}
                       <div class="col tilt">
