--- a/static/css/style.css
+++ b/static/css/style.css
@@ -124,11 +124,11 @@ form.d-flex input[type="text"] {
 .hero-image {
     margin-top: 40px;
     margin-bottom: 20px;
-    max-height: 80vh;
+    max-height: 100%;
     overflow: hidden;
 }
 .hero-image img {
-    height: 50vh;
+    height: 100%;
 }
 .hero-image p {
     font-size : 20px;
@@ -242,8 +242,8 @@ input:-webkit-autofill:focus {
     border: 1px solid #F50000;
     border-radius: 10px;
     padding: 0.75rem;
-    margin-left: 1rem;
-    margin-right: 1rem;
+    /*margin-left: 1rem;
+    margin-right: 1rem;*/
 }
 .result-card img{
     width: 200px; 
