Limit the gallery to 12 reviews in views Add horns image to the thank you and 404 pages

--- a/gig_reviews/templates/gig_reviews/404.html
+++ b/gig_reviews/templates/gig_reviews/404.html
@@ -1,10 +1,11 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load cloudinary %}
 
 {% block title %}404{% endblock %}
 
 {% block content %}
-
+    <img src="https://res.cloudinary.com/dqde3a83z/image/upload/v1748106876/red-horns_meorvq.png" class="card-img-top horns" alt="Default horns image">
     <h1>Ooooops!</h1>
     <p>What have you done you plonker!</p>
     <p>Return home and try again </p>
