--- a/gig_reviews/templates/gig_reviews/thank_you.html
+++ b/gig_reviews/templates/gig_reviews/thank_you.html
@@ -3,6 +3,7 @@
 
 
 {% block content %}
+  <img src="https://res.cloudinary.com/dqde3a83z/image/upload/v1748106876/red-horns_meorvq.png" class="card-img-top horns" alt="Default horns image">
   <h1>Thanks for your message!</h1>
   <p>We’ll get back to you as soon as possible.</p>
   <a href="{% url 'home' %}">Return to home</a>
