--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -4,6 +4,7 @@
   <div class="container-fluid page-item">
     <div class="row mx-auto justify-content-center align-items-start">
       <div class="col-12 text-center">
+          <img src="https://res.cloudinary.com/dqde3a83z/image/upload/v1748106876/red-horns_meorvq.png" class="card-img-top horns" alt="Default horns image">
         <h1>You have been logged out</h1>
           <a href="{% url 'login' %}" class="logout"><button type="submit" class="page-btn">Log in again</button></a>
       </div>
